Fix layout issues when using a page as the front page.

--- a/src/assets/less/content.less
+++ b/src/assets/less/content.less
@@ -251,6 +251,16 @@ body.home:not(.paged) {
 		}
 	}
 }
+
+body.home.page {
+	.hentry {
+		float: none !important;
+		width: auto !important;
+	}
+	.entry-title {
+		.font-size( @heading-size ) !important;
+	}
+}
 /* @end */
 
 /* @group Archive */
